mudança menu lateral

--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,7 @@
   }
 
   #fp-nav ul li .fp-tooltip {
-    color: #5F5F5F !important;
+    color: 	white !important;
   }
 
   /* Expanding border effect */
