--- a/css/style.css
+++ b/css/style.css
@@ -369,7 +369,7 @@
   }
 
   /* portfolio section */
-
+ /* PEDRO TESTEEEEEEEEEEEEEEEE */
   .content {
     margin-left: auto;
     margin-right: auto;
@@ -433,9 +433,29 @@
 
   /* input field styles */
 
-.contact-form {
-    padding: 0px 15px 0px 15px;
+.contact-form{
+    padding: 38px 15px 0px 15px;
+    width:50%;
+    float:left;
   }
+
+  .contact-map{
+    padding: 0px 15px 0px 15px;
+    width:50%;
+    float:left;
+  }
+  .map-font{
+    font-size:13px;
+    font-weight: bold;
+    font-color:rgb(218,62,57);
+  }
+  #mapa{
+    display: inline-block; 
+    width:100%;
+    height: 180px;
+  }
+
+
 
 
   .form-control {
@@ -525,7 +545,6 @@
     .header-links {
       display: none;
     }   
-  }
 
   /* mobile styles */
 
@@ -540,7 +559,6 @@
 
     }
 
-  }
 
 /* loading screen animation */
 
@@ -553,7 +571,6 @@
     text-align: center;
     font-size: 10px;
     z-index: 1000;
-  }
 
   .spinner > div {
     background-color: #FF6363;
