--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
   }
 
   h1 {
-    color: rgb(261,61,56);
+    color: #db3e39;
     font-weight: bold;
   }
 
@@ -434,25 +434,33 @@
   /* input field styles */
 
 .contact-form{
-    padding: 38px 15px 0px 15px;
-    width:50%;
-    float:left;
+    padding: 0px 35px 0px 35px;
+    position: static;
+    float: left;
+
   }
 
   .contact-map{
-    padding: 0px 15px 0px 15px;
-    width:50%;
-    float:left;
-  }
+    padding: 25px 0px 0px 0px;
+    position: static;
+    height: 50%;
+
+  } 
   .map-font{
     font-size:13px;
     font-weight: bold;
-    font-color:rgb(218,62,57);
+    font-color:#db3e39;
   }
   #mapa{
     display: inline-block; 
     width:100%;
-    height: 180px;
+    height: 169px;
+    width: 250px;
+
+  }
+
+  .pequenas{
+       background: lightblue; 
   }
 
 
