Correção de bugs

--- a/css/style.css
+++ b/css/style.css
@@ -86,10 +86,12 @@
     left: 0;
     z-index: 600;
     padding: 10px;
+    width: 120px;
   }
 
   .nav-brand img {
-    width: 120px;
+    width: 100px;
+    margin-top: -5px;
   }
 
   .fa-bars {
