--- a/css/style.css
+++ b/css/style.css
@@ -551,7 +551,11 @@
 
     .header-links {
       display: none;
-    }   
+    }
+
+    img {
+      max-width: 500px;
+    }
 
   /* mobile styles */
 
@@ -564,6 +568,10 @@
     .aboutme h1 {
       font-size: 28px;
 
+    }
+
+    img {
+      max-width: 400px;
     }
 
 
