Deixando o formulário responsivo!

--- a/css/style.css
+++ b/css/style.css
@@ -438,16 +438,15 @@
   /* input field styles */
 
 .contact-form{
-    padding: 0px 35px 0px 35px;
-    position: static;
-    float: left;
-    width: 50%;
+    padding: 0px 15px 0px 15px; 
+    width:50%; 
+    float:left; 
   }
 
   .contact-map{
-    padding: 25px 0px 0px 0px;
-    position: static;
-    height: 50%;
+     padding: 0px 15px 0px 15px; 
+    width:50%; 
+    float:left; 
 
   } 
   .map-font{
@@ -462,6 +461,67 @@
     width: 250px;
 
   }
+
+@media only screen and (max-width: 700px){ 
+
+  .contact-form{
+    padding: 0px 15px 0px 15px; 
+    width:95%; 
+    float:left; 
+  }
+
+  .contact-map{
+     padding: 0px 15px 0px 15px; 
+    width:95%; 
+    float:left; 
+
+  } 
+  .map-font{
+    font-size:13px;
+    font-weight: bold;
+    font-color:#db3e39;
+  }
+  #mapa{
+    display: inline-block; 
+    width:100%;
+    height: 169px;
+    width: 250px;
+
+  }
+
+}
+
+
+@media only screen and (max-width: 500px){ 
+
+  .contact-form{
+    padding: 0px 15px 0px 15px; 
+    width:112%; 
+    float:left; 
+  }
+
+  .contact-map{
+     padding: 0px 15px 0px 15px; 
+    width:112%; 
+    float:left; 
+
+  } 
+  .map-font{
+    font-size:13px;
+    font-weight: bold;
+    font-color:#db3e39;
+  }
+  #mapa{
+    display: inline-block; 
+    width:100%;
+    height: 169px;
+    width: 250px;
+
+  }
+
+}
+
+
 
 /*PEDROOO PARTE*/
 
