--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
   body {
     font-family: 'Raleway', sans-serif !important;
-    background-color: rgb(220,222,222);
+    background-color: #FFF;
   }
 
   ul
@@ -13,6 +13,7 @@
   a {
     text-decoration: none !important;
   }
+
 
   h1 {
     color: #db3e39;
@@ -404,7 +405,6 @@
     background: rgba(0, 0, 0, 0.62) !important;
   }
 
-
   /* contact us styles */
 
   .fa-paper-plane {
@@ -438,16 +438,15 @@
   /* input field styles */
 
 .contact-form{
-    padding: 0px 35px 0px 35px;
-    position: static;
-    float: left;
-    width: 50%;
+    padding: 0px 15px 0px 15px; 
+    width:50%; 
+    float:left; 
   }
 
   .contact-map{
-    padding: 25px 0px 0px 0px;
-    position: static;
-    height: 50%;
+     padding: 0px 15px 0px 15px; 
+    width:50%; 
+    float:left; 
 
   } 
   .map-font{
@@ -463,7 +462,219 @@
 
   }
 
+@media only screen and (max-width: 700px){ 
+
+  .contact-form{
+    padding: 0px 15px 0px 15px; 
+    width:95%; 
+    float:left; 
+  }
+
+  .contact-map{
+     padding: 0px 15px 0px 15px; 
+    width:95%; 
+    float:left; 
+
+  } 
+  .map-font{
+    font-size:13px;
+    font-weight: bold;
+    font-color:#db3e39;
+  }
+  #mapa{
+    display: inline-block; 
+    width:100%;
+    height: 169px;
+    width: 250px;
+
+  }
+
+}
+
+
+@media only screen and (max-width: 500px){ 
+
+  .contact-form{
+    padding: 0px 15px 0px 15px; 
+    width:112%; 
+    float:left; 
+  }
+
+  .contact-map{
+     padding: 0px 15px 0px 15px; 
+    width:112%; 
+    float:left; 
+
+  } 
+  .map-font{
+    font-size:13px;
+    font-weight: bold;
+    font-color:#db3e39;
+  }
+  #mapa{
+    display: inline-block; 
+    width:100%;
+    height: 169px;
+    width: 250px;
+
+  }
+
+}
+
+
+
 /*PEDROOO PARTE*/
+
+
+div.gallery { 
+    border: 1px solid #ccc; 
+} 
+ 
+div.gallery:hover { 
+    border: 1px solid #777; 
+} 
+ 
+div.gallery img { 
+    width: 100%; 
+} 
+ 
+div.desc { 
+    padding: 15px; 
+    text-align: center; 
+} 
+ 
+* { 
+    box-sizing: border-box; 
+} 
+ 
+.responsive { 
+    padding: 0 6px; 
+    float: left; 
+    width: 24.9999%; 
+} 
+ 
+@media only screen and (max-width: 700px){ 
+    .responsive { 
+        width: 50%; 
+        margin: 6px 0; 
+    } 
+} 
+ 
+@media only screen and (max-width: 500px){ 
+    .responsive { 
+        width: 50%; 
+        margin: 6px 0; 
+    } 
+} 
+ 
+.clearfix:after { 
+    content: ""; 
+    display: table; 
+    clear: both; 
+} 
+
+/*PEDROOO PARTE*/
+
+   
+   .tooltip {
+    position: relative;
+    display: inline-block;
+}
+
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 120px;
+    background-color:green;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 10%;
+    left: 50%;
+    margin-left: -60px;
+}
+
+  .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 6px;
+    border-style: solid;
+    border-color: black transparent transparent transparent;
+}
+
+  .tooltip:hover .tooltiptext{
+    visibility: visible;
+}
+ 
+
+.pequenastexto1{
+  padding: 0px 15px 0px 15px;
+  width: 45%;
+  float: left;
+}
+
+.pequenasimg{
+  padding: 0px 15px 0px 15px;
+  width: 55%;
+  float: left;
+  height: 348px;
+  background-image: url(https://static.pexels.com/photos/106344/pexels-photo-106344.jpeg);
+  background-size: 100% 100%;
+  border-radius: 10px;
+  opacity: 0.8;
+}
+
+.pequenastexto2{
+  padding: 0px 15px 0px 15px;
+  width: 90%;
+  float: left;
+}
+
+@media only screen and (max-width: 700px){ 
+  .pequenastexto1{
+  padding: 0px 15px 0px 15px;
+  width: 95%;
+  float: left;
+}
+
+.pequenasimg{
+  padding: 0px 15px 0px 15px;
+  width: 95%;
+  float: left;
+}
+
+.pequenastexto2{
+  padding: 0px 15px 0px 15px;
+  width: 95%;
+  float: left;
+  }
+} 
+ 
+@media only screen and (max-width: 500px){ 
+   .pequenastexto1{
+  padding: 0px 15px 0px 15px;
+  width: 100%;
+  float: left;
+}
+
+.pequenasimg{
+  display: none;
+}
+}
+.pequenastexto2{
+  padding: 0px 15px 0px 15px;
+  width: 100%;
+  float: left;
+  }
+}
+
+
+
 
   .form-control {
     border: 2px solid rgba(0, 0, 0, 0.27);
@@ -543,7 +754,7 @@
 
   /* smaller resolution styles */
 
-  @media (min-width: 100px) and (max-width: 500px) {
+  @media (min-width: 100px) and (max-width: 840px) {
 
     .fa-bars {
       display: block !important;
@@ -554,12 +765,13 @@
     }
 
     img {
-      max-width: 500px;
+      max-width: 400px;
+      size: 60%;
     }
 
   /* mobile styles */
 
-  @media (min-width: 100px) and (max-width: 400px) {
+  @media (min-width: 100px) and (max-width: 640px) {
 
     .content {
       max-width: 300px;
@@ -572,8 +784,15 @@
 
     img {
       max-width: 400px;
+      size: 40%;
     }
 
+    @media (min-width: 100px) and (max-width: 400px) {
+      img {
+        max-width: 350px;
+        size: 28%;
+      }
+    }
 
 /* loading screen animation */
 
@@ -712,4 +931,15 @@
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
+}
+
+/* test video */
+
+.white-popup {
+  position: absolute;
+  background: #FFF;
+  padding: 20px;
+  width:auto;
+  margin: 20px auto;
+  left: 100px;
 }
