--- a/css/style.css
+++ b/css/style.css
@@ -1195,7 +1195,7 @@ width: 50px;
   position: absolute;
   background: #FFF;
   padding: 20px;
-  width:auto;
+  width:80%;
   margin: 20px auto;
   left: 100px;
 }
