--- a/css/style.css
+++ b/css/style.css
@@ -524,7 +524,13 @@
 
 
 
-
+div.gallery { 
+    border: 1px solid #ccc; 
+} 
+ 
+div.gallery:hover { 
+    border: 1px solid #777; 
+} 
  
 div.gallery img { 
     width: 100%; 
