--- a/css/style.css
+++ b/css/style.css
@@ -920,13 +920,23 @@ width: 50px;
   width: 100%;
 }
 
-..textonegocio2{
+.textonegocio2{
   width: 100%;
 }
 
 /*imagens carrosel*/
 
-
+#owl-demo .owl-item div{
+  padding:5px;
+}
+#owl-demo .owl-item img{
+  display: block;
+  width: 50%;
+  height: 240px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+}
 
 @media (min-width: 501px) and (max-width: 700px) {
 }
