background about me

--- a/css/style.css
+++ b/css/style.css
@@ -216,8 +216,8 @@
 
   .aboutme {
     background: url("https://i.imgur.com/hJhfuTH.jpg");
-    background-size: contain,cover;
-    background-size: 100% 100%;
+    background-position: center center;
+    background-size: cover;
     background-attachment: local;
     background-repeat: no-repeat;
   }
