--- a/css/style.css
+++ b/css/style.css
@@ -627,13 +627,14 @@ width: 50px;
   height: 135px;
  }
 
+
  .utildrogas{
 width: 50px;
   height: 90px;
  }
 @media only screen and (max-width: 700px){ 
 .responsive { 
-        width: 23%; 
+        max-width: 42%; 
         margin: 6px 0; 
 }
 
@@ -863,9 +864,9 @@ width: 50px;
 
 .pequenasimg{
   padding: 0px 15px 0px 15px;
-  width: 55%;
+  width: 37%;
   float: left;
-  height: 348px;
+  height: 200px;
   background-image: url(https://static.pexels.com/photos/106344/pexels-photo-106344.jpeg);
   background-size: 100% 100%;
   border-radius: 10px;
@@ -927,6 +928,13 @@ width: 50px;
 
 /*imagens carrosel*/
 
+#owl-carousel{
+  max-width: 70%;
+  padding-left: 29%;
+}
+
+
+
 #owl-demo .owl-item div{
   padding:5px;
 }
@@ -955,6 +963,7 @@ width: 50px;
 
   textarea {
     min-height: 10em;
+    max-height: 150px;
   }
 
   label {
