--- a/css/style.css
+++ b/css/style.css
@@ -96,16 +96,8 @@
     margin-top: -5px;
   }
 
-  .bandeira {
-    position: absolute;
-    left: 7%;
-    z-index: 600;
-    padding: 10px;
-    width: 400px;
-  }
-
-  .bandeira img {
-    margin-top: 15px;
+  .nav-brand .bandeira1 {
+    padding-left: 5%;
   }
 
   .fa-bars {
