bandeiras no mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1068,6 +1068,18 @@ width: 50px;
       max-width: 400px;
       size: 40%;
     }
+
+    .logo {
+      max-width: 50px;
+    }
+
+    .bandeira1 {
+      margin-left: -12px;
+      max-width: 40px;
+    }
+    .bandeira2 {
+      max-width: 20px;
+    }
   }
 
     @media (min-width: 100px) and (max-width: 400px) {
