--- a/css/style.css
+++ b/css/style.css
@@ -1069,13 +1069,18 @@ width: 50px;
       size: 40%;
     }
 
+    .nav-brand {
+      padding-left: 0;
+    }
+
     .logo {
       max-width: 90px;
+      margin-left: -7px;
     }
 
     .bandeira1 {
-      margin-left: -12px;
-      max-width: 50px;
+      margin-left: -9px;
+      max-width: 44.5px;
     }
     .bandeira2 {
       max-width: 25px;
