--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,10 @@
   }
 
   p {
-    font-size: 20px;
+    font-size: 15px;
     color: #484848;
+    opacity: .8;
+    font-family: 'Source Sans Pro', sans-serif;
   }
 
   .section {
@@ -87,11 +89,10 @@
     left: 0;
     z-index: 600;
     padding: 10px;
-    width: 120px;
+    width: 400px;
   }
 
   .nav-brand img {
-    width: 100px;
     margin-top: -5px;
   }
 
@@ -214,7 +215,7 @@
   }
 
   .aboutme {
-    background: url("https://s3-us-west-2.amazonaws.com/files.bradengelhardt.com/brad-bg-main.jpg") no-repeat;
+    background: url("https://i.imgur.com/hJhfuTH.jpg") no-repeat;
     background-size: contain,cover;
     background-size: 100% 100%;   
   }
@@ -373,8 +374,7 @@
     color:rgba(0, 0, 0, 0.5);
   }
 
-  /* portfolio section */
- /* PEDRO TESTEEEEEEEEEEEEEEEE */
+ 
   .content {
     margin-left: auto;
     margin-right: auto;
@@ -455,12 +455,18 @@
     font-color:#db3e39;
   }
   #mapa{
-    display: inline-block; 
+    display: inline-flex; 
     width:100%;
-    height: 169px;
-    width: 250px;
+    height: 7px;
+    width: 300px;
 
   }
+
+  .lvl-logo {
+    width: 40px;
+    height: auto;
+  }
+
 
 @media only screen and (max-width: 700px){ 
 
@@ -482,10 +488,10 @@
     font-color:#db3e39;
   }
   #mapa{
-    display: inline-block; 
+    display: inline-flex; 
     width:100%;
-    height: 169px;
-    width: 250px;
+    height: 7px;
+    width: 300px;
 
   }
 
@@ -512,19 +518,14 @@
     font-color:#db3e39;
   }
   #mapa{
-    display: inline-block; 
+    display: inline-flex; 
     width:100%;
-    height: 169px;
-    width: 250px;
+    height: 7px;
+    width: 300px;
 
   }
 
 }
-
-
-
-/*PEDROOO PARTE*/
-
 
 div.gallery { 
     border: 1px solid #ccc; 
@@ -819,7 +820,6 @@ width: 50px;
     clear: both; 
 } 
 
-/*PEDROOO PARTE*/
 
    
    .tooltip {
@@ -876,8 +876,8 @@ width: 50px;
 }
 
 .pequenastexto2{
-  padding: 0px 15px 0px 15px;
-  width: 90%;
+  padding: 45px 15px 0px 15px;
+  width: 100%;
   float: left;
 }
 
@@ -919,18 +919,31 @@ width: 50px;
   }
 }
 
-.imagemnegocio{
-  background-size: 100% 100%;
-  background-image: url(https://static.pexels.com/photos/442574/pexels-photo-442574.jpeg);
-  background-repeat:no-repeat;opacity: 0.4;
-  height:325px;
-  border-radius: 4px;
-}
 
-.textonegocio{
+.textonegocio1{
   width: 100%;
 }
 
+.textonegocio2{
+  width: 100%;
+}
+
+/*imagens carrosel*/
+
+#owl-demo .owl-item div{
+  padding:5px;
+}
+#owl-demo .owl-item img{
+  display: block;
+  width: 50%;
+  height: 240px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+}
+
+@media (min-width: 501px) and (max-width: 700px) {
+}
 
   .form-control {
     border: 2px solid rgba(0, 0, 0, 0.27);
@@ -1049,6 +1062,10 @@ width: 50px;
         size: 28%;
       }
     }
+
+
+
+
 
 /* loading screen animation */
 
@@ -1190,3 +1207,52 @@ width: 50px;
 }
 
 /* test video */
+
+.white-popup {
+  position: absolute;
+  background: #FFF;
+  padding: 20px;
+  width:80%;
+  margin: 20px auto;
+  left: 100px;
+}
+
+
+/* Feel free to change duration  */ 
+.animated  {
+  -webkit-animation-duration : 1000 ms  ;
+  animation-duration : 1000 ms  ;
+  -webkit-animation-fill-mode : both  ;
+  animation-fill-mode : both  ;
+}  
+/* .owl-animated-out - only for current item */ 
+/* This is very important class. Use z-index if you want move Out item above In item */ 
+.owl-animated-out {
+  z-index : 1 
+   }
+/* .owl-animated-in - only for upcoming item
+/* This is very important class. Use z-index if you want move In item above Out item */ 
+.owl-animated-in {
+  z-index : 0 
+   }
+/* .fadeOut is style taken from Animation.css and this is how it looks in owl.carousel.css:  */ 
+.fadeOut  {
+  -webkit-animation-name : fadeOut  ;
+  animation-name : fadeOut  ;
+}  
+@-webkit-keyframes  fadeOut  {
+  0% {
+    opacity : 1   ;
+  }  
+  100% {
+    opacity : 0   ;
+  }  
+}
+@keyframes  fadeOut  {
+  0% {
+    opacity : 1   ;
+  }  
+  100% {
+    opacity : 0   ;
+  }  
+}
