--- a/css/style.css
+++ b/css/style.css
@@ -462,11 +462,16 @@
     font-color:#db3e39;
   }
   #mapa{
-    display: inline-block; 
+    display: inline-flex; 
     width:100%;
-    height: 169px;
-    width: 250px;
+    height: 7px;
+    width: 300px;
 
+  }
+
+  .lvl-logo {
+    width: 40px;
+    height: auto;
   }
 
 
@@ -490,10 +495,10 @@
     font-color:#db3e39;
   }
   #mapa{
-    display: inline-block; 
+    display: inline-flex; 
     width:100%;
-    height: 169px;
-    width: 250px;
+    height: 7px;
+    width: 300px;
 
   }
 
@@ -520,10 +525,10 @@
     font-color:#db3e39;
   }
   #mapa{
-    display: inline-block; 
+    display: inline-flex; 
     width:100%;
-    height: 169px;
-    width: 250px;
+    height: 7px;
+    width: 300px;
 
   }
 
@@ -730,7 +735,8 @@ width: 50px;
     
 .responsive { 
         width: 50%; 
-        margin: 6px 0; 
+        margin: 8px 0 0 7px;
+        padding-left: 9%;
 } 
 
 
