--- a/css/style.css
+++ b/css/style.css
@@ -212,10 +212,13 @@
   /* main header section */
 
   .opaque-bg {
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 20%;
     max-width: 380px;
     padding: 1px 1px 5px 5px;
+  }
+
+  .opague-bg h1 {
+    float: left;
   }
 
   .aboutme {
@@ -453,7 +456,7 @@
   .contact-map{
      padding: 0px 15px 0px 15px; 
     width:50%; 
-    float:left; 
+    float:left;
 
   } 
   .map-font{
